<resources>
    <string name="app_name">ContactsManager</string>
    <string name="action_settings">Settings</string>
    <string name="show_button_text">Show Additional Fields</string>
    <string name="hide_button_text">Hide Additional Fields</string>
    <string name="name">Name</string>
    <string name="number">021 665 093</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="job">Job Title</string>
    <string name="company">Company</string>
    <string name="website">Website</string>
    <string name="im">IM</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="phone_number_error">Phone number cannot be empty!</string>
</resources>
